# django-simple-list-editable

./: README.md  pyproject.toml
simple_list_editable/: admin.py
